Fix layout issues.

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,13 +15,15 @@
   --border-radius: 30px;
 }
 
+html,
+body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
 html {
   font-size: 62.5%;
-  width: 100%;
-  height: 100%;
-  margin: 0px;
-  padding: 0px;
-  overflow-x: hidden;
 }
 /* Typography */
 body {
